# gsd_db_compare

./: .gitignore  MYSQL_DATASOURCE.md  PR_PHASE_4.md  README.md  init.txt  package-lock.json  package.json  playwright.config.ts
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  (+3 more)
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py  002_advanced_features.py
backend/app/: main.py
backend/app/adapters/: __init__.py  base.py  mysql.py  oracle.py
backend/app/api/: compare.py  connections.py  critical_tables.py  data_compare.py  history.py  notifications.py  reports.py  scheduled_tasks.py
backend/app/comparison/: __init__.py  data.py  multi_table.py  schema.py  type_mapping.py
backend/app/db/: base.py  models.py  session.py
backend/app/notifications/: __init__.py  email.py  templates.py
backend/app/notifications/templates/: alert_email.html  summary_email.html
backend/app/reports/: __init__.py  excel_generator.py  html_generator.py
backend/app/reports/templates/: report.html
backend/app/scheduler/: __init__.py  jobs.py  scheduler.py  store.py
backend/app/schemas/: api.py  critical_tables.py  history.py  notifications.py  scheduled_tasks.py
backend/tests/integration/: test_phase4.py
frontend/: .env.example  index.html  package-lock.json  package.json
scripts/: init_mysql.sql  restart.sh  start.sh  status.sh  stop.sh
tests/: add-connections.spec.ts  compare-schema.spec.ts
(+104 files in other folders)
