[project]
name = "gsd-db-compare"
version = "0.1.0"
description = "Database schema and data comparison tool"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.130",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "mysql-connector-python>=8.0",
    "alembic>=1.12",
    "APScheduler>=3.10.0",
    "aiosmtplib>=3.0",
    "cryptography>=42.0",
    "structlog>=24.0",
    "oracledb>=2.0",
    "Jinja2>=3.1",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
